error with model_0

--- a/CIFAR10_modelconfidence.ipynb
+++ b/CIFAR10_modelconfidence.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNK8XO/SwMoKI2Ggba0HZ3C",
+      "authorship_tag": "ABX9TyNOZcO1XOhsruKzvISXqmJ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1008,6 +1008,77 @@
     {
       "cell_type": "code",
       "source": [
+        "modelt.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XI7nP5ryDYU6",
+        "outputId": "d5db80be-b125-48e8-a541-0887648b54a8"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_9\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " conv2d_45 (Conv2D)          (None, 16, 16, 48)        1344      \n",
+            "                                                                 \n",
+            " max_pooling2d_27 (MaxPoolin  (None, 8, 8, 48)         0         \n",
+            " g2D)                                                            \n",
+            "                                                                 \n",
+            " batch_normalization_27 (Bat  (None, 8, 8, 48)         192       \n",
+            " chNormalization)                                                \n",
+            "                                                                 \n",
+            " conv2d_46 (Conv2D)          (None, 8, 8, 96)          41568     \n",
+            "                                                                 \n",
+            " max_pooling2d_28 (MaxPoolin  (None, 3, 3, 96)         0         \n",
+            " g2D)                                                            \n",
+            "                                                                 \n",
+            " batch_normalization_28 (Bat  (None, 3, 3, 96)         384       \n",
+            " chNormalization)                                                \n",
+            "                                                                 \n",
+            " conv2d_47 (Conv2D)          (None, 3, 3, 192)         166080    \n",
+            "                                                                 \n",
+            " conv2d_48 (Conv2D)          (None, 3, 3, 192)         331968    \n",
+            "                                                                 \n",
+            " conv2d_49 (Conv2D)          (None, 3, 3, 256)         442624    \n",
+            "                                                                 \n",
+            " max_pooling2d_29 (MaxPoolin  (None, 1, 1, 256)        0         \n",
+            " g2D)                                                            \n",
+            "                                                                 \n",
+            " batch_normalization_29 (Bat  (None, 1, 1, 256)        1024      \n",
+            " chNormalization)                                                \n",
+            "                                                                 \n",
+            " flatten_9 (Flatten)         (None, 256)               0         \n",
+            "                                                                 \n",
+            " dense_27 (Dense)            (None, 512)               131584    \n",
+            "                                                                 \n",
+            " dropout_18 (Dropout)        (None, 512)               0         \n",
+            "                                                                 \n",
+            " dense_28 (Dense)            (None, 256)               131328    \n",
+            "                                                                 \n",
+            " dropout_19 (Dropout)        (None, 256)               0         \n",
+            "                                                                 \n",
+            " dense_29 (Dense)            (None, 10)                2570      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 1,250,666\n",
+            "Trainable params: 1,249,866\n",
+            "Non-trainable params: 800\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#calculate accuracy/utility test acc\n",
         "prb=model_0.predict(test_data[0:5000])\n",
         "test_labeld_result=np.argmax(prb,axis=1)\n",
@@ -1039,9 +1110,81 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import StratifiedKFold\n",
+        "X=trainX1\n",
+        "Y=trainY1\n",
+        "for i in range(0,M):\n",
+        "  K=M-i\n",
+        "  if(K>=2):\n",
+        "    train=X\n",
+        "    test=Y\n",
+        "    skf = StratifiedKFold(n_splits=K)\n",
+        "    print(skf.get_n_splits(X, Y))\n",
+        "    for train_index, test_index in skf.split(X, Y):\n",
+        "       X,globals()['x_traind%s' % i]=train[train_index], train[test_index]\n",
+        "    #print(X.shape)\n",
+        "       Y,globals()['y_traind%s' % i]=test[train_index], test[test_index]\n",
+        "  elif K==1:\n",
+        "    globals()['x_traind%s' % i]=X\n",
+        "    globals()['y_traind%s' % i]=Y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XWCn4FDM9sPR",
+        "outputId": "cd627dbf-b630-4a0c-c403-819030c64728"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#target model index\n",
+        "in1=np.zeros(5000)\n",
+        "in2=M*np.ones(5000)\n",
+        "index_target=np.hstack((in1,in2))\n",
+        "index_target"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K1CKhv2PA8r-",
+        "outputId": "59eefea5-5fa6-4ab7-8a5d-b27494869b07"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., ..., 5., 5., 5.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "XWCn4FDM9sPR"
+        "id": "Ed9gFjs1BDoO"
       },
       "execution_count": null,
       "outputs": []
