--- a/CIFAR10_modelconfidence.ipynb
+++ b/CIFAR10_modelconfidence.ipynb
@@ -990,47 +990,22 @@
       "cell_type": "code",
       "source": [
         "# predict with classes\n",
-        "print('Predict on train...')\n",
-        "prob_train = model_np.predict_classes(train_data[0:5000])\n",
-        "print('Predict on test...')\n",
-        "prob_test = model_np.predict_classes(test_data[5000:10000])"
+        "# print('Predict on train...')\n",
+        "# prob_train = model_np.predict_classes(train_data[0:5000])\n",
+        "# print('Predict on test...')\n",
+        "# prob_test = model_np.predict_classes(test_data[5000:10000])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 253
-        },
-        "id": "obRyF0YF3S9C",
-        "outputId": "7898d44b-fdc6-4252-b301-064efca82004"
+        "id": "obRyF0YF3S9C"
       },
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Predict on train...\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-46-a459ba620724>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# predict with classes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Predict on train...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprob_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_np\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_classes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Predict on test...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprob_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_np\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_classes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5000\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Sequential' object has no attribute 'predict_classes'"
-          ]
-        }
-      ]
+      "execution_count": 75,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "prob_test.sum(axis=1)\n",
-        "print(prob_test)\n",
-        "# prob_test.add(Lambda(lambda x: K.sum(x, axis=0,keepdims=True)))"
+        "print(prob_test)"
       ],
       "metadata": {
         "colab": {
