Error with label index

--- a/CIFAR10_modelconfidence.ipynb
+++ b/CIFAR10_modelconfidence.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -199,7 +199,7 @@
       "metadata": {
         "id": "HV5t0MLwF4Df"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
         },
         "outputId": "43b906cb-23ff-4f29-bd5c-67cfd881ad3d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +252,7 @@
       "metadata": {
         "id": "dndeBOUtGGta"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,7 +279,7 @@
       "metadata": {
         "id": "tBZscdkgGTQV"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,7 +294,7 @@
         },
         "outputId": "34d84671-86e8-4f38-f6dc-86a4757bf9bf"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +318,7 @@
         "id": "KeC1_tKRwv5X",
         "outputId": "41c7ddb5-af30-4c6a-e256-32ae927667bd"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -641,13 +641,39 @@
     {
       "cell_type": "code",
       "source": [
+        "train_labels"
+      ],
+      "metadata": {
+        "id": "VsudY0kUy0tw",
+        "outputId": "8d75011b-1a2f-4d08-854c-0c938987b9f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6, 9, 9, ..., 9, 1, 1], dtype=uint8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "train_y=to_categorical(train_labels)\n",
         "test_y=to_categorical(test_labels)"
       ],
       "metadata": {
         "id": "QtEUO05hGlcA"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -672,7 +698,7 @@
       "metadata": {
         "id": "gxdG5oxtGQTc"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -710,7 +736,7 @@
       "metadata": {
         "id": "BLRveNkOGw45"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -726,7 +752,7 @@
         "id": "VllJgILlyAaX",
         "outputId": "acbec474-c15e-42fd-a4a1-59c0983987f2"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,7 +826,7 @@
       "metadata": {
         "id": "ga4edzymyG4g"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -819,7 +845,7 @@
         "id": "HjFvFWoGyzcX",
         "outputId": "06b16795-5b76-4539-e44f-8c836b16f2d8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,7 +885,7 @@
         "id": "Znt-jsnXvLyv",
         "outputId": "b5db0392-f747-4398-c28c-442a71f2c1ba"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -878,7 +904,7 @@
       "metadata": {
         "id": "84ZnSCgSwcOa"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -896,7 +922,7 @@
         "id": "WIvmx_0GvkTk",
         "outputId": "63a1878d-32ed-478f-a715-e7bdfbfa2712"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -970,18 +996,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mYjOl-ugy2eA",
-        "outputId": "817475c7-c111-400f-e9b8-f28edc1ffd60"
+        "outputId": "ce9207a3-159c-4a4c-c592-d85bb37234db"
       },
-      "execution_count": 45,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Predict on train...\n",
-            "157/157 [==============================] - 4s 27ms/step\n",
+            "157/157 [==============================] - 4s 23ms/step\n",
             "Predict on test...\n",
-            "157/157 [==============================] - 3s 21ms/step\n"
+            "157/157 [==============================] - 3s 22ms/step\n"
           ]
         }
       ]
@@ -998,13 +1024,13 @@
       "metadata": {
         "id": "obRyF0YF3S9C"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "prob_test.sum(axis=1)\n",
+        "# prob_test.sum(axis=1)\n",
         "print(prob_test)"
       ],
       "metadata": {
@@ -1012,27 +1038,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cXtfJkhg35PM",
-        "outputId": "81fde0ed-19b0-4682-b0f0-0bc4360f53ee"
+        "outputId": "391661d7-00d5-4474-f73f-3fa0e8ffbd8f"
       },
-      "execution_count": 73,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[6.4675454e-03 1.8501593e-02 1.4431953e-02 ... 8.4363639e-01\n",
-            "  1.9578941e-03 2.1974901e-02]\n",
-            " [1.9950662e-03 2.7423033e-03 8.2804272e-03 ... 4.8036180e-03\n",
-            "  1.5149998e-03 5.1664719e-03]\n",
-            " [4.7904681e-02 3.3584931e-01 3.2165761e-03 ... 7.4918626e-04\n",
-            "  5.3140843e-01 7.2547831e-02]\n",
+            "[[1.11536367e-03 1.25660631e-03 3.51191452e-03 ... 9.51948643e-01\n",
+            "  2.76293402e-04 1.71911751e-03]\n",
+            " [1.42115774e-03 1.09899649e-03 1.51504092e-02 ... 6.21723803e-03\n",
+            "  3.62283754e-04 9.30554350e-04]\n",
+            " [5.08569852e-02 1.26212180e-01 4.02105367e-03 ... 3.54655250e-03\n",
+            "  5.79926133e-01 2.16440663e-01]\n",
             " ...\n",
-            " [3.0485862e-03 2.3851437e-03 8.5967965e-02 ... 5.8317516e-02\n",
-            "  1.9711696e-03 2.4531391e-03]\n",
-            " [6.4017668e-02 3.0823186e-01 7.3850989e-02 ... 6.7616716e-02\n",
-            "  6.1627194e-02 7.5421214e-02]\n",
-            " [5.8812597e-03 6.0584676e-03 7.5805724e-02 ... 5.9995514e-01\n",
-            "  3.7962529e-03 1.1058524e-02]]\n"
+            " [5.31109935e-03 2.52828537e-03 8.40218440e-02 ... 1.02920696e-01\n",
+            "  3.49873304e-03 3.55813350e-03]\n",
+            " [9.22007635e-02 1.00234263e-01 9.12106186e-02 ... 1.49186924e-01\n",
+            "  9.67134684e-02 1.23238899e-01]\n",
+            " [6.53267512e-03 6.33175205e-03 4.50245254e-02 ... 7.57206917e-01\n",
+            "  2.82807532e-03 1.21649718e-02]]\n"
           ]
         }
       ]
@@ -1048,15 +1074,156 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "clWIKimZ7Sm6",
-        "outputId": "924c7d41-fb58-46e4-9e07-2475acb369f4"
+        "outputId": "ece5b86c-aaef-42ac-95e8-7b879cba9797"
       },
-      "execution_count": 74,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "0.5686275\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##taking maximum probability\n",
+        "prob_test"
+      ],
+      "metadata": {
+        "id": "ajSlxEBJzBJB",
+        "outputId": "2f64b4a3-aa1c-4018-ba24-76273257a6e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1.11536367e-03, 1.25660631e-03, 3.51191452e-03, ...,\n",
+              "        9.51948643e-01, 2.76293402e-04, 1.71911751e-03],\n",
+              "       [1.42115774e-03, 1.09899649e-03, 1.51504092e-02, ...,\n",
+              "        6.21723803e-03, 3.62283754e-04, 9.30554350e-04],\n",
+              "       [5.08569852e-02, 1.26212180e-01, 4.02105367e-03, ...,\n",
+              "        3.54655250e-03, 5.79926133e-01, 2.16440663e-01],\n",
+              "       ...,\n",
+              "       [5.31109935e-03, 2.52828537e-03, 8.40218440e-02, ...,\n",
+              "        1.02920696e-01, 3.49873304e-03, 3.55813350e-03],\n",
+              "       [9.22007635e-02, 1.00234263e-01, 9.12106186e-02, ...,\n",
+              "        1.49186924e-01, 9.67134684e-02, 1.23238899e-01],\n",
+              "       [6.53267512e-03, 6.33175205e-03, 4.50245254e-02, ...,\n",
+              "        7.57206917e-01, 2.82807532e-03, 1.21649718e-02]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_max = np.argmax(prob_test)"
+      ],
+      "metadata": {
+        "id": "5KxgRxMIzKWk"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_max"
+      ],
+      "metadata": {
+        "id": "FNixY8C8zWp-",
+        "outputId": "5ed4c27c-2116-4098-c442-966931359a58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12337"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_sum = prob_test.sum(axis=1)\n",
+        "test_sum"
+      ],
+      "metadata": {
+        "id": "46n9ifr5zm3G",
+        "outputId": "71d019c4-2665-49d8-c5d1-dda66eecaebe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.99999994, 1.0000001 , 1.        , ..., 1.        , 1.        ,\n",
+              "       0.99999994], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## checking label with max probability\n",
+        "print('Size of vector with test data probability is: ' , prob_test.size)\n",
+        "prob_test[12337]"
+      ],
+      "metadata": {
+        "id": "CHnTWDK80MW5",
+        "outputId": "65f455ca-70ba-4221-cf31-9da56481c247",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 218
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Size of vector with test data probability is:  50000\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-50-ad6d32b8fada>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m## checking label with max probability\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Size of vector with test data probability is: '\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mprob_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprob_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m12337\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m: index 12337 is out of bounds for axis 0 with size 5000"
           ]
         }
       ]
@@ -1072,7 +1239,7 @@
       "metadata": {
         "id": "kqqZgRHV3wd-"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
