--- a/CIS545_Fall22_ModelConfidence.ipynb
+++ b/CIS545_Fall22_ModelConfidence.ipynb
@@ -663,11 +663,11 @@
         "model1.summary()"
       ],
       "metadata": {
-        "id": "rA8tCxnU3eOd",
-        "outputId": "d8fbf858-4214-4325-e4a8-454f925b551e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rA8tCxnU3eOd",
+        "outputId": "d8fbf858-4214-4325-e4a8-454f925b551e"
       },
       "execution_count": 16,
       "outputs": [
@@ -1025,7 +1025,7 @@
       "source": [
         "## fitting d2\n",
         "\n",
-        "# train the model with d1\n",
+        "# train the model with d3\n",
         "history2 = model1.fit(d2_data, d2_label,\n",
         "                       validation_data=(x_test, y_test),\n",
         "                       batch_size=128, \n",
@@ -1033,8 +1033,57 @@
         "history2"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "Dn9fcLZezKbt",
-        "outputId": "b7ce9b9b-1e50-4680-8866-53c656659497",
+        "outputId": "b7ce9b9b-1e50-4680-8866-53c656659497"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "79/79 [==============================] - 26s 328ms/step - loss: 1.3047 - accuracy: 0.5489 - val_loss: 2.4238 - val_accuracy: 0.2816\n",
+            "Epoch 2/5\n",
+            "79/79 [==============================] - 26s 336ms/step - loss: 1.1517 - accuracy: 0.5982 - val_loss: 2.0495 - val_accuracy: 0.3844\n",
+            "Epoch 3/5\n",
+            "79/79 [==============================] - 27s 336ms/step - loss: 1.0192 - accuracy: 0.6424 - val_loss: 1.7272 - val_accuracy: 0.4469\n",
+            "Epoch 4/5\n",
+            "79/79 [==============================] - 32s 413ms/step - loss: 0.9360 - accuracy: 0.6755 - val_loss: 1.2330 - val_accuracy: 0.5740\n",
+            "Epoch 5/5\n",
+            "79/79 [==============================] - 26s 328ms/step - loss: 0.8097 - accuracy: 0.7164 - val_loss: 1.2643 - val_accuracy: 0.5793\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f8122fcda50>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## fitting d3\n",
+        "\n",
+        "# train the model with d3\n",
+        "history3 = model1.fit(d3_data, d3_label,\n",
+        "                       validation_data=(x_test, y_test),\n",
+        "                       batch_size=128, \n",
+        "                       epochs=5)\n",
+        "history3"
+      ],
+      "metadata": {
+        "id": "NjHsYp54UO9o",
+        "outputId": "fc5621be-c84d-4870-eba8-b2ee5e92dd03",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1046,14 +1095,52 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "79/79 [==============================] - 26s 328ms/step - loss: 1.3047 - accuracy: 0.5489 - val_loss: 2.4238 - val_accuracy: 0.2816\n",
+            "79/79 [==============================] - 33s 419ms/step - loss: 1.1178 - accuracy: 0.6224 - val_loss: 1.1083 - val_accuracy: 0.6186\n",
             "Epoch 2/5\n",
-            "79/79 [==============================] - 26s 336ms/step - loss: 1.1517 - accuracy: 0.5982 - val_loss: 2.0495 - val_accuracy: 0.3844\n",
+            "79/79 [==============================] - 30s 375ms/step - loss: 0.9212 - accuracy: 0.6841 - val_loss: 1.3925 - val_accuracy: 0.5468\n",
             "Epoch 3/5\n",
-            "11/79 [===>..........................] - ETA: 19s - loss: 1.0652 - accuracy: 0.6250"
+            "79/79 [==============================] - 26s 333ms/step - loss: 0.7842 - accuracy: 0.7363 - val_loss: 1.1688 - val_accuracy: 0.6164\n",
+            "Epoch 4/5\n",
+            "14/79 [====>.........................] - ETA: 18s - loss: 0.6719 - accuracy: 0.7600"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## fitting d4\n",
+        "\n",
+        "# train the model with d4\n",
+        "history4 = model1.fit(d4_data, d4_label,\n",
+        "                       validation_data=(x_test, y_test),\n",
+        "                       batch_size=128, \n",
+        "                       epochs=5)\n",
+        "history4"
+      ],
+      "metadata": {
+        "id": "k4vahaqBUbga"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## fitting d5\n",
+        "\n",
+        "# train the model with d4\n",
+        "history5 = model1.fit(d5_data, d5_label,\n",
+        "                       validation_data=(x_test, y_test),\n",
+        "                       batch_size=128, \n",
+        "                       epochs=5)\n",
+        "history5"
+      ],
+      "metadata": {
+        "id": "sFI0tAYmUo0E"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
